--- a/index.html
+++ b/index.html
@@ -59,18 +59,20 @@
             <div class="about-text">
               <h2><span class="gradient-text">About Me</span></h2>
               <p>
-                I'm Emil — a former professional hockey player turned front-end developer. After
-                over a decade of chasing pucks across Europe, I'm now (trying to) build responsive,
+                I'm Emil - former professional hockey player turned front-end developer. After over
+                a decade of chasing pucks across Europe, I'm now (trying to) build responsive,
                 accessible, and user-focused web experiences.
               </p>
               <div class="about-more">
                 <p>
-                  I bring the same grit and team mentality from the ice to every project I work on.
-                  Currently sharpening my skills in JavaScript, React, SCSS, and modern UI design.
+                  I like building things that look good and feel great to use. Still new to the dev
+                  world, but I'm a big fan of collaboration and passing the puck (or props).
                 </p>
                 <p>
-                  Proud father of a two year old daughter. Swede living outside of Oslo, Norway.
+                  Into JavaScript, React, and SCSS — with a splash of UX design using Figma to keep
+                  things smooth and user-friendly.
                 </p>
+                <p>Dad, Swede, based near Oslo.</p>
               </div>
               <button class="read-more-button" id="readMoreBtn" aria-expanded="false">
                 Read more
@@ -93,6 +95,7 @@
               <li><img src="./src/assets/icons/react.svg" alt="React" /></li>
               <li><img src="./src/assets/icons/vite.svg" alt="Vite" /></li>
               <li><img src="./src/assets/icons/git.svg" alt="Git" /></li>
+              <li><img src="./src/assets/icons/figma.svg" alt="Figma" /></li>
               <li><img src="./src/assets/icons/bootstrap.svg" alt="Bootstrap" /></li>
             </ul>
           </div>
@@ -158,6 +161,30 @@
                   <div class="overlay"></div>
                 </div>
                 <div class="project-content">
+                  <h3>UX Fly</h3>
+                  <p class="short-info">
+                    A UX case study for a fictional airline focused on modernizing the flight
+                    booking experience.
+                  </p>
+                  <button
+                    class="button button--light"
+                    data-project-id="project3"
+                    aria-expanded="false"
+                  >
+                    View details
+                  </button>
+                  <div class="project-details" id="project3-details" hidden>
+                    <p>Detailed info about Project three…</p>
+                  </div>
+                </div>
+              </article>
+
+              <article class="project-card card4" data-project>
+                <div class="image-wrapper">
+                  <img src="/path/to/project1.jpg" alt="Project 4 Screenshot" />
+                  <div class="overlay"></div>
+                </div>
+                <div class="project-content">
                   <h3>Coming Soon</h3>
                   <p class="short-info">Typescript project work in progress.</p>
                   <button
@@ -168,11 +195,81 @@
                   >
                     View details
                   </button>
-                  <div class="project-details" id="project3-details" hidden>
+                  <div class="project-details" id="project4-details" hidden>
                     <p>Detailed info about Project three…</p>
                   </div>
                 </div>
               </article>
+            </div>
+          </div>
+        </section>
+
+        <section id="contact" class="contact-section">
+          <div class="container contact-container">
+            <h2><span class="gradient-text">say hello</span></h2>
+            <p class="contact-intro">Slide into my DMs</p>
+
+            <form
+              name="contact"
+              method="POST"
+              data-netlify="true"
+              netlify-honeypot="bot-field"
+              class="contact-form"
+              novalidate
+            >
+              <input type="hidden" name="form-name" value="contact" />
+              <p class="hidden">
+                <label>Don't fill this out: <input name="bot-field" /></label>
+              </p>
+
+              <div class="form-group">
+                <label for="name">Name <span aria-hidden="true">*</span></label>
+                <input
+                  type="text"
+                  name="name"
+                  id="name"
+                  placeholder="Your name"
+                  autocomplete="name"
+                  required
+                  minlength="2"
+                  aria-required="true"
+                />
+                <small class="error-message" id="name-error" aria-live="polite"></small>
+              </div>
+
+              <div class="form-group">
+                <label for="email">Email <span aria-hidden="true">*</span></label>
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder="you@email.com"
+                  autocomplete="email"
+                  aria-required="true"
+                  required
+                />
+                <small class="error-message" id="email-error" aria-live="polite"></small>
+              </div>
+
+              <div class="form-group">
+                <label for="message">Message <span aria-hidden="true">*</span></label>
+                <textarea
+                  name="message"
+                  id="message"
+                  rows="5"
+                  aria-required="true"
+                  placeholder="Say tjena or hello!"
+                  required
+                  minlength="10"
+                ></textarea>
+                <small class="error-message" id="message-error" aria-live="polite"></small>
+              </div>
+
+              <button type="submit" class="button">Send Message</button>
+            </form>
+
+            <div id="form-success" class="success-message" hidden aria-live="polite">
+              Thank you! Your message has been sent.
             </div>
           </div>
         </section>
